--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ customtkinter>=5.2.0
 # Procesamiento de imágenes (iconos)
 pillow>=10.0.0
 
+# Cryptography (vault)
+cryptography>=42.0.0
+
 # Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
@@ -14,3 +17,6 @@ pytest-mock>=3.11.0
 
 # Build
 pyinstaller>=6.0.0
+
+# Crypto
+cryptography>=42.0.0
